--- a/app/views/layouts/themes/materialize/main_layout.html.erb
+++ b/app/views/layouts/themes/materialize/main_layout.html.erb
@@ -18,14 +18,7 @@
 
 <%= render 'layouts/themes/materialize/footer'  %>
 
-<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-<!-- Compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.4/jquery.smooth-scroll.min.js"></script>
-
+<%= render 'layouts/themes/materialize/js'  %>
 
 </body>
 </html>
