--- a/app/views/layouts/themes/materialize/_js.html
+++ b/app/views/layouts/themes/materialize/_js.html
@@ -5,3 +5,21 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/retina.js/1.3.0/retina.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.4/jquery.smooth-scroll.min.js"></script>
+
+<script type="application/javascript">
+
+    $(document).ready(function(){
+        "use strict";
+
+        $(".button-collapse").sideNav();
+        $(".menu-icon a").sideNav();
+        $(".dropdown-button").dropdown({ hover: false });
+
+        $(".back-to-top").smoothScroll({ speed: 'auto', easing: 'easeInOutSine' });
+
+        $('.parallax').parallax();
+
+    });
+
+
+</script>
