--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,30 +4,33 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Image</th>
-      <th>Description</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Title</th>
+    <th>Image</th>
+    <th>Description</th>
+    <th>User</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @posts.each do |post| %>
+  <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
         <td><%= image_tag post.image.url(:thumb) %></td>
         <td><%= post.description %></td>
         <td><%= post.user.name %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.id==post.user_id %>
+            <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td><%= link_to 'Destroy', post, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <% end %>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+
