--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,117 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? %>
+    <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+    <p>
+      <strong>Title:</strong>
+      <%= @post.title %>
+    </p>
 
-<p>
-  <%= image_tag @post.image.url(:medium) %>
-</p>
+    <p>
+      <%= image_tag @post.image.url(:medium) %>
+    </p>
 
 
 
-<p>
-  <strong>Description:</strong>
-  <%= @post.description %>
-</p>
+    <p>
+      <strong>Description:</strong>
+      <%= @post.description %>
+    </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @post.user.name %>
-</p>
+    <p>
+      <strong>User:</strong>
+      <%= @post.user.name %>
+    </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+    <% if current_user.id==@post.user_id %>
+        <%= link_to 'Edit', edit_post_path(@post) %> |
+
+    <% end %>
+
+    <%= link_to 'Back', posts_path %>
+
+<% else %>
+
+    <div class="row">
+
+      <div class="col s12">
+        <%= image_tag @post.image.url(:large), :class => 'responsive-img full-width-img' %>
+
+        <h1 class="post-title"><%= @post.title %></h1>
+        <span class="post-date"><%= @post.created_at.strftime('%B %d, %Y') %></span>
+        <%= @post.description %>
+
+      </div>
+    </div>
+
+
+    <!-- comments from start here -->
+    <div class="col s12 comments">
+      <h3>Comments</h3>
+
+
+        <%= form_for @comment,html: { multipart: true,id:'theme-comment',:role=>'form' } do |f| %>
+        <div class="row">
+          <div class="input-field col s6">
+            <%= f.text_field :fname,:class=>'validate',:required=>'required'%>
+            <label for="comment-first-name">First Name</label>
+          </div>
+          <div class="input-field col s6">
+            <%= f.text_field :lname,:class=>'validate',:required=>'required'%>
+            <label for="comment-last-name">Last Name</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.text_field :email,:class=>'validate',:required=>'required'%>
+            <label for="comment-email">Email</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+            <%= f.text_area :message,:class=>'materialize-textarea',:required=>'required' %>
+           <label for="comment-message">Message</label>
+          </div>
+        </div>
+
+          <div class="row">
+            <div class="input-field col s12">
+              <%= f.file_field :image,:class=>'validate' %>
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="input-field col s12">
+              <%= f.hidden_field :post_id,:value=>params[:id] %>
+            </div>
+          </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+           <button class="btn waves-effect waves-light blue-grey darken-1" type="submit" name="action">Submit</button>
+          </div>
+        </div>
+      <% end %>
+
+</div>
+
+    <% @comments.each do |comment| %>
+    <div class="card-panel grey lighten-5 z-depth-1">
+      <div class="row">
+        <div class="col s3 m2 l1">
+          <%= image_tag comment.image.url(:thumb),:class=>'circle responsive-img' %>
+        </div>
+        <div class="col s8 m10 l11">
+          <h6 class="comment-name"><b><%= comment.fname %>&nbsp;<%= comment.lname %></b></h6>
+          <span class="comment-date"><%= comment.created_at.strftime('%B %d, %Y') %></span>
+          <p><%= comment.message %></p>
+        </div>
+      </div>
+    </div>
+        <% end %>
+
+
+<% end %>
+
+
