--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -36,14 +36,13 @@
       <% end %>
     </div>
 
-    <div class="field">
-      <%= f.label :post_id %><br>
+
+    <div class="input-field col s12">
+      <%= f.label :post_id %>
       <%= f.collection_select :post_id, Post.all, :id, :title, prompt: true %>
     </div>
+<br/>
 
 
 
-    <div class="actions">
-      <%= f.submit %>
-    </div>
 <% end %>
