--- a/app/views/layouts/themes/materialize/_header.html.erb
+++ b/app/views/layouts/themes/materialize/_header.html.erb
@@ -10,16 +10,53 @@
               <i class="mdi-navigation-menu"></i>
             </a>
 
+
             <ul class="desktop-menu hide-on-med-and-down">
               <li class="active"><a href="<%= root_url %>">Home</a></li>
-              <li><a href="#">About me</a></li>
-              <li><a href="#">Log in</a></li>
+
+              <% if user_signed_in? %>
+
+                  <li><%= link_to 'Posts', posts_path %></li>
+                  <li><%= link_to 'Comments', comments_path %></li>
+
+                  <% if current_user.role.name == 'admin' %>
+                      <li><%= link_to 'User Roles', roles_path %></li>
+                      <li><%= link_to 'Members', members_path %></li>
+                  <% end %>
+
+                  <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+                  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+
+              <% else %>
+                  <li><a href="#">About me</a></li>
+                  <li><%= link_to "Sign in", new_user_session_path %></li>
+
+              <% end %>
+
             </ul>
 
             <ul class="side-nav" id="nav-mobile">
-              <li class="active"><a href="index-1.html">Home</a></li>
-              <li><a href="#">About me</a></li>
-              <li><a href="#">Log in</a></li>
+              <li class="active"><a href="<%= root_url %>">Home</a></li>
+
+              <% if user_signed_in? %>
+
+                  <li><%= link_to 'Posts', posts_path %></li>
+                  <li><%= link_to 'Comments', comments_path %></li>
+
+                  <% if current_user.role.name == 'admin' %>
+                      <li><%= link_to 'User Roles', roles_path %></li>
+                      <li><%= link_to 'Members', members_path %></li>
+                  <% end %>
+
+                  <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+                  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+
+              <% else %>
+                  <li><a href="#">About me</a></li>
+                  <li><%= link_to "Sign in", new_user_session_path %></li>
+
+              <% end %>
+
 
             </ul>
 
