--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= image_tag post.image.url(:thumb) %></td>
-        <td><%= post.description %></td>
+        <td><%= truncate post.description,length: 160 %></td>
         <td><%= post.user.name %></td>
         <td><%= link_to 'Show', post %></td>
         <% if current_user.id==post.user_id %>
