--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -31,10 +31,15 @@
 
 <% else %>
 
+
+    <!-- single from start here -->
     <div class="row">
 
       <div class="col s12">
+
+
         <%= image_tag @post.image.url(:large), :class => 'responsive-img full-width-img' %>
+
 
         <h1 class="post-title"><%= @post.title %></h1>
         <span class="post-date"><%= @post.created_at.strftime('%B %d, %Y') %></span>
