--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -28,6 +28,7 @@
   <strong>Post:</strong>
   <%= @comment.post.title %>
 </p>
-
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
+<% if current_user.id==@comment.post.user_id ||current_user.role.name == 'admin' %>
+    <%= link_to 'Edit', edit_comment_path(@comment) %> |
+<% end %>
 <%= link_to 'Back', comments_path %>
