bamboo themes ready

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,64 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<section class="blog-content blog-grid">
+      <div class="row">
+        <!-- POST -->
+        <div class="col-sm-6 col-md-4">
+          <div class="post">
+            <div class="post-cat">
+              <ul>
+                <li><a href="#">Fashion</a></li>
+              </ul>
+            </div>
+            <div class="post-format">
+              <a href="#">
+                <i class="fa fa-video-camera"></i>
+              </a>
+            </div>
+            <div class="post-media">
+              <div class="image-wrap">
+                <img src="images/blog/1.jpg" alt="">
+              </div>
+              <div class="post-share">
+                <div class="share">
+                  <a href="#">
+                    <i class="fa fa-facebook"></i>
+                    <span class="count">500</span>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-twitter"></i>
+                    <span class="count">320</span>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-dribbble"></i>
+                    <span class="count">400</span>
+                  </a>
+                  <a href="#">
+                    <i class="fa fa-instagram"></i>
+                    <span class="count">150</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="post-title">
+              <h2><a href="single.html">Nam commodo turpis sit amet magna</a></h2>
+            </div>
+            <div class="post-meta">
+                            <span class="author">
+                                <i class="pi-icon pi-icon-user"></i>
+                                By <a href="#">Admin</a>
+                            </span>
+                            <span class="date">
+                                <i class="pi-icon pi-icon-clock"></i>
+                                <a href="#">Jan 10, 2014</a>
+                            </span>
+                            <span class="comment">
+                                <i class="pi-icon pi-icon-comment"></i>
+                                <a href="#">05 Comments</a>
+                            </span>
+            </div>
+          </div>
+        </div>
+        <!-- END / POST -->
+       
+      </div>
+
+</section>
