--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_for @post,html: { multipart: true } do |f| %>
+<div class="container">
+  <div class="jumbotron">
+<%= form_for @post,html: { multipart: true,:role=>'form' } do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -11,25 +13,48 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title,:class=>'form-control' %>
   </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= f.label :image %><br>
-      <%= f.file_field :image %>
+      <%= f.file_field :image ,:class=>'form-control' %>
     </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description,:class=>'form-control',:rows=>20 %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+  <div class="form-group">
+
+    <%= f.hidden_field :user_id ,value: current_user.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+</div>
+</div>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.3.0/tinymce.min.js"></script>
+
+<script type="text/javascript">
+    tinymce.init({
+        selector: 'textarea',
+        height: 200,
+        width:960,
+        plugins: [
+            'advlist autolink lists link image charmap print preview anchor',
+            'searchreplace visualblocks code fullscreen',
+            'insertdatetime media table contextmenu paste code'
+        ],
+        toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+        content_css: [
+            '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
+            '//www.tinymce.com/css/codepen.min.css'
+        ]
+    });
+</script>
