--- a/app/views/layouts/themes/bamboo/main_layout.html.erb
+++ b/app/views/layouts/themes/bamboo/main_layout.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 <!-- PRELOADER -->
-<%= render 'layouts/themes/bamboo/preloader' %>
+<%#= render 'layouts/themes/bamboo/preloader' %>
 <!-- END / PRELOADER -->
 
 <!-- PAGE WRAP -->
