--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,8 @@
       <th>Image</th>
       <th>Description</th>
       <th>User</th>
+      <th>Font</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +22,8 @@
         <td><%= image_tag post.image.url(:thumb) %></td>
         <td><%= post.description %></td>
         <td><%= post.user.name %></td>
+        <td><%= post.font.name %></td>
+        <td><%= post.category.name %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
